--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --verbose"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
-    "eslint": "^8.24.0"
+    "eslint": "^8.24.0",
+    "jest": "^29.1.2"
   }
 }
