--- a/package.json
+++ b/package.json
@@ -5,23 +5,25 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --verbose --runInBand",
     "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
-    "lint": "eslint .",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --verbose"
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "mongodb": "^4.10.0",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "eslint": "^8.24.0",
-    "jest": "^29.1.2"
+    "jest": "^29.1.2",
+    "supertest": "^6.3.0"
   }
 }
